# ChangeLog for sci-libs/openfoam-wmake
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -openfoam-wmake-1.4.1_p20080328.ebuild,
  -files/openfoam-wmake-compile-1.4.1_p20080328.patch,
  -files/openfoam-wmake-paraFoam-1.4.1_p20080328.patch:
  Drop old version

  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  openfoam-wmake-1.4.1_p20080827.ebuild,
  -files/openfoam-wmake-1.4.1_p20080827.patch:
  Move big patch to external source

  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
  Add local useflags to metadata.xml (GLEP 56)

  28 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-wmake-1.4.1_p20080827.ebuild,
  +files/openfoam-wmake-paraFoam-1.4.1_p20080827.patch,
  +files/openfoam-wmake-compile-1.4.1_p20080827.patch,
  +files/openfoam-wmake-1.4.1_p20080827.patch:
  Update patches for the OpenFOAM wmake

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-wmake-1.4.1_p20080328.ebuild, openfoam-wmake-1.5.ebuild:
  Changed version dependencies

  28 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-wmake-1.5.ebuild:
  Changed make to emake.

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  openfoam-wmake-1.5.ebuild:
  Fix unnecessary quoting

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-wmake-1.5.ebuild, +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5

  08 Apr 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-wmake-1.4.1_p20080328.ebuild:
  Just changed the patch source URI, according to the new sources from dev.ge.org

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  -openfoam-wmake-1.4.1_p20080118.ebuild,
  openfoam-wmake-1.4.1_p20080328.ebuild,
  -files/openfoam-wmake-1.4.1_p20080328.patch:
  Drop old version + move oversized patch

  28 Mar 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-wmake-1.4.1_p20080328.ebuild,