@@ -4,7 +4,9 @@ AUX openfoam-wmake-paraFoam-1.4.1_p20080827.patch 1065 RMD160 b20c53b7976fd9c253
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
 DIST openfoam-wmake-1.4.1_p20080827.patch 578413 RMD160 e5e4b0a7be1ffeeee67d59a81c705527a3dfeb7e SHA1 7999f7171f8dd1711ae9025e3a2439a1334572ca SHA256 5bae4193a320ed363f83886a89f548bd6ba78f6f2da74d78133435cfd9f52b1b
+DIST openfoam-wmake-1.5_p20080905.patch 2698588 RMD160 479bd1c9982898f494ad479198852027e787a252 SHA1 0f9f5c27afc9e483d1cf0c1bb20a700def8b2a52 SHA256 76a2a6830dea1a5c0085d5f9bafb33059d5141693b5b4d1622654554cf67917a
 EBUILD openfoam-wmake-1.4.1_p20080827.ebuild 7735 RMD160 250e0f86f3de39e3a799b532e20db16e657f7a09 SHA1 40fd8d6d2dc2c701d3e3d5c8c081f3ffb1f135e9 SHA256 e8e996ba507ffc8678b47f2377be6d8419b34590100d61c783cb5a0823dc05ed
 EBUILD openfoam-wmake-1.5.ebuild 2561 RMD160 6ea16a1bb20cbaa1b7e3c8f328d894c4e1e23396 SHA1 d16cb542224a642bff14b2641cfb8ca2932d0871 SHA256 5803c3b534c2a9b7c84dae5e1bfb728b1b09b70a14d2cfa272ee5a8c143a9d2d
-MISC ChangeLog 2629 RMD160 59d645be813d0fe9bbf454ed46430bf23a05260c SHA1 7224acf5ea4e4f87b92c5bbd48b9f11ff96d56d6 SHA256 d42cf0ac5bebb60d53a2a762c5e65845a341eed616444772b69e6e2146c899c1
+EBUILD openfoam-wmake-1.5_p20080905.ebuild 2657 RMD160 3657c2e093c16bb03474c314f39063802aab4c48 SHA1 684697dff0d1ef580db20679b746e0c88c73dee1 SHA256 c57797fe132fc1864f6050938f9cafe7ad6b15d7bcf0b17737d1d8611d24a96a
+MISC ChangeLog 2741 RMD160 ada4de7849396bf07222bd7899fc1caa032ee68d SHA1 95c2a90804798e5cdfaa6eeef79d0f6ae5b6f827 SHA256 f65e3e32a8becb4763a96b3ff7b8e4efe152c4233869069889125783cff9751c
 MISC metadata.xml 338 RMD160 5c81790bd48a9e38ad9bc98fc5e15fa1ff6dac5c SHA1 bae9c545be8e4438b9e1f891ffc33a53405e753d SHA256 8daa7d1d48a127020f8cb03c55bb6140a1253d374284318384def84d7d725b5e
