@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Sep 2008; Oliver Borm (boroli) <oli.borm@web.de>
+  +openfoam-wmake-1.5_p20080905.ebuild:
+  New patch sets
+
   31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   -openfoam-wmake-1.4.1_p20080328.ebuild,
   -files/openfoam-wmake-compile-1.4.1_p20080328.patch,
